--- a/assignment5/HW5_1.ipynb
+++ b/assignment5/HW5_1.ipynb
@@ -84,26 +84,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "balloons.jpg     nature.jpg       polarlights.jpg\r\n",
-      "mountains.jpg    ocean.jpg\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls test_images/"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 128,
    "metadata": {
     "collapsed": false
@@ -128,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -137,18 +117,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 balloons\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "('balloons', 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-161-c44f7f0c6c03>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpic\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;31m#         theta[(pic, r)] = init_normal(data[pic], r)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m         \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpic\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtheta\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpic\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: ('balloons', 10)"
+      "10 balloons\n",
+      "10 nature\n",
+      "10 polarlights\n",
+      "10 mountains\n",
+      "10"
      ]
     }
    ],
