--- a/assignment5/HW5_1.ipynb
+++ b/assignment5/HW5_1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -61,8 +61,8 @@
     "    N, I = x.shape\n",
     "    K = pi.size\n",
     "    w = -0.5*(np.ones((K,I)).dot((x*x).T)-2*(mu.dot(x.T))+(mu*mu).dot(np.ones((I,N))))\n",
-    "    w += np.log(pi).reshape((-1,1))\n",
-    "    w -= sp.misc.logsumexp(w, axis=0)\n",
+    "    w = w+np.log(pi).reshape((-1,1))\n",
+    "    w = w-sp.misc.logsumexp(w, axis=0)\n",
     "    w = np.exp(w)\n",
     "    return w\n",
     "\n",
@@ -111,7 +111,7 @@
    "execution_count": 164,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -309,29 +309,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "theta2 = {}\n",
+    "variance = 40\n",
+    "for r in [10, 20, 50]:\n",
+    "    for pic in pics:\n",
+    "        pi, mu = theta[(pic,r)]\n",
+    "        pi, mu = EM(data[pic]*variance, r, E_normal, M_normal, theta=(pi, mu*variance), iters=50)\n",
+    "        theta2[(pic, r)] = (pi, mu*variance)\n",
+    "        display(data[pic], theta2[(pic, r)], dshape[pic])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "('balloons', 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-162-c315d69d09c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mpic\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpics\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0mtheta2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpic\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mE_normal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mM_normal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtheta\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtheta\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpic\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtheta2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: ('balloons', 10)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "theta2 = {}\n",
-    "for r in [10, 20, 50]:\n",
-    "    for pic in pics:\n",
-    "        theta2[(pic, r)] = EM(data[pic], 50, E_normal, M_normal, theta=theta[(pic,r)], iters=50)\n",
-    "        display(data, theta2[(pic, r)], dshape)"
+    "theta_rand = init_multi(data['polarlights'], 20)\n",
+    "theta_rand_end = EM(data[pic], 20, E_normal, M_normal, theta=theta_rand, iters=50)\n",
+    "display(data['polarlights'], theta_rand_end, dshape['polarlights'])"
    ]
   },
   {
