--- a/assignment7/Homework7.ipynb
+++ b/assignment7/Homework7.ipynb
@@ -654,167 +654,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([-0.1926306 ,  0.07965443, -0.        , ..., -0.02580573,\n",
-      "       -0.00950318, -0.00409798]), 32.75412391508978, 43.678004791596415, 15000)\n",
-      "(array([-0.2676246 ,  0.21413821, -0.04263968, ..., -0.02544954,\n",
-      "       -0.01085568, -0.00425623]), 4.8051860764046515, 43.678004791596415, 907)\n",
-      "(array([-0.33396957,  0.34007366, -0.0873975 , ..., -0.02529908,\n",
-      "       -0.01026587, -0.00414516]), 1.0314218025184954, 43.678004791596415, 1189)\n",
-      "(array([-0.34904185,  0.36832169, -0.09779778, ..., -0.02525298,\n",
-      "       -0.01007327, -0.00411343]), 0.5485664033876914, 43.678004791596415, 453)\n",
-      "(array([-0.35046918,  0.37096398, -0.09878036, ..., -0.02524753,\n",
-      "       -0.01005596, -0.00411042]), 0.49916283906812225, 43.678004791596415, 51)\n",
-      "(array([-0.27194361,  0.14981867, -0.        , ..., -0.03463725,\n",
-      "       -0.01259888, -0.00475517]), 36.72792489586271, 43.740350967510096, 15000)\n",
-      "(array([-0.36052396,  0.30584307, -0.04520116, ..., -0.03429849,\n",
-      "       -0.01435808, -0.00488412]), 5.752228273284715, 43.740350967510096, 780)\n",
-      "(array([-0.40328341,  0.37760821, -0.06821301, ..., -0.03425262,\n",
-      "       -0.0139214 , -0.00483739]), 1.5363248754112928, 43.740350967510096, 862)\n",
-      "(array([-0.41021349,  0.38704156, -0.07161382, ..., -0.0342445 ,\n",
-      "       -0.01377388, -0.00483486]), 1.0403702964755515, 43.740350967510096, 343)\n",
-      "(array([-0.41106732,  0.38803847, -0.072008  , ..., -0.03424315,\n",
-      "       -0.01375205, -0.00483517]), 0.9855790794124822, 43.740350967510096, 59)\n",
-      "(array([-0.27424208,  0.15753214,  0.        , ..., -0.03670597,\n",
-      "       -0.01851856, -0.01130743]), 34.265791292388705, 35.334123113815, 15000)\n",
-      "(array([-0.36264703,  0.31132172, -0.04201878, ..., -0.03589218,\n",
-      "       -0.02105698, -0.01146489]), 5.426167620758468, 35.334123113815, 790)\n",
-      "(array([-0.39909174,  0.35868561, -0.0560839 , ..., -0.03565593,\n",
-      "       -0.02092207, -0.01153983]), 1.4194477470836029, 35.334123113815, 1820)\n",
-      "(array([-0.4001153 ,  0.35122217, -0.05567026, ..., -0.03548665,\n",
-      "       -0.02082674, -0.01162394]), 0.895635687408828, 35.334123113815, 1424)\n",
-      "(array([-0.40011465,  0.3512168 , -0.05567012, ..., -0.03548652,\n",
-      "       -0.02082666, -0.011624  ]), 0.852004853668497, 35.334123113815, 1)\n",
-      "(array([-0.23680474,  0.        , -0.        , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 38.721675665085776, 43.678004791596415, 15000)\n",
-      "(array([-0.3333285 ,  0.17465181, -0.00631648, ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 5.255094279043334, 43.678004791596415, 1361)\n",
-      "(array([-0.41248201,  0.32812197, -0.0554668 , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 1.1800808196022716, 43.678004791596415, 1363)\n",
-      "(array([ -4.32384233e-01,   3.65813974e-01,  -6.92495687e-02, ...,\n",
-      "        -0.00000000e+00,   9.54945600e-05,   4.58268671e-05]), 0.5579150605724048, 43.678004791596415, 584)\n",
-      "(array([ -4.34583960e-01,   3.69876341e-01,  -7.07677986e-02, ...,\n",
-      "         2.42692616e-06,   1.28041747e-04,   5.05856156e-05]), 0.488909760238826, 43.678004791596415, 80)\n",
-      "(array([ -4.21166562e-01,   2.13429373e-06,  -0.00000000e+00, ...,\n",
-      "        -0.00000000e+00,  -0.00000000e+00,  -0.00000000e+00]), 42.571966638120216, 43.740350967510096, 15000)\n",
-      "(array([-0.5476449 ,  0.26774029,  0.        , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 5.970431903326312, 43.740350967510096, 2704)\n",
-      "(array([-0.57774514,  0.31851258, -0.01060063, ...,  0.        ,\n",
-      "        0.        ,  0.        ]), 1.5359035827464702, 43.740350967510096, 810)\n",
-      "(array([ -5.85654737e-01,   3.28756356e-01,  -1.38779720e-02, ...,\n",
-      "         0.00000000e+00,   1.19924454e-04,   3.58522554e-06]), 0.9734995612780325, 43.740350967510096, 435)\n",
-      "(array([ -5.86475933e-01,   3.29583883e-01,  -1.41722003e-02, ...,\n",
-      "         7.64962905e-07,   1.42055254e-04,   2.95970179e-06]), 0.9079653285224025, 43.740350967510096, 67)\n",
-      "(array([-0.42578263,  0.09134952, -0.        , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 36.87415864406715, 35.334123113815, 15000)\n",
-      "(array([-0.54185927,  0.35146162,  0.        , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 5.574452078537488, 35.334123113815, 2586)\n",
-      "(array([-0.56467456,  0.38973518, -0.00890861, ...,  0.        ,\n",
-      "        0.        ,  0.        ]), 1.5760309848576888, 35.334123113815, 577)\n",
-      "(array([ -5.71442247e-01,   3.98402792e-01,  -1.24012313e-02, ...,\n",
-      "         0.00000000e+00,   9.40255593e-05,   0.00000000e+00]), 1.068841943428327, 35.334123113815, 366)\n",
-      "(array([ -5.72136376e-01,   3.99006705e-01,  -1.27351867e-02, ...,\n",
-      "         3.81553960e-06,   1.14759644e-04,  -0.00000000e+00]), 1.0063620643265572, 35.334123113815, 61)\n",
-      "(array([-0.20067163,  0.        , -0.        , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 33.32336164074991, 43.678004791596415, 15000)\n",
-      "(array([-0.30584357,  0.14292134,  0.        , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 5.34993644778249, 43.678004791596415, 1468)\n",
-      "(array([-0.39353019,  0.31208533, -0.03869337, ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 1.4636881371664692, 43.678004791596415, 1380)\n",
-      "(array([ -4.10963713e-01,   3.46114041e-01,  -5.00300430e-02, ...,\n",
-      "        -0.00000000e+00,   0.00000000e+00,   2.19261725e-05]), 0.7275786259309562, 43.678004791596415, 437)\n",
-      "(array([ -4.13280283e-01,   3.50531525e-01,  -5.15665895e-02, ...,\n",
-      "         5.69586004e-06,   2.71903789e-05,   2.73475019e-05]), 0.642020887537235, 43.678004791596415, 67)\n",
-      "(array([-0.40952565,  0.        , -0.        , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 35.956706386490936, 43.740350967510096, 15000)\n",
-      "(array([-0.52928176,  0.23770826,  0.        , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 7.235494547798689, 43.740350967510096, 1476)\n",
-      "(array([-0.58064498,  0.33201891, -0.01933918, ..., -0.        ,\n",
-      "        0.        ,  0.        ]), 2.001742662592078, 43.740350967510096, 876)\n",
-      "(array([ -5.87344933e-01,   3.43430543e-01,  -2.29441022e-02, ...,\n",
-      "         0.00000000e+00,   1.67038216e-04,   1.27712323e-05]), 1.246859281554427, 43.740350967510096, 224)\n",
-      "(array([ -5.88365046e-01,   3.45072152e-01,  -2.34954424e-02, ...,\n",
-      "         5.86648301e-07,   1.97155848e-04,   1.42705309e-05]), 1.1593202321869853, 43.740350967510096, 41)\n",
-      "(array([-0.377771,  0.      , -0.      , ..., -0.      , -0.      , -0.      ]), 31.296508513784516, 35.334123113815, 15000)\n",
-      "(array([-0.50132282,  0.27576424,  0.        , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 5.612458226064893, 35.334123113815, 2178)\n",
-      "(array([-0.53932359,  0.33842476, -0.010459  , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 1.761335449812477, 35.334123113815, 811)\n",
-      "(array([ -5.44181461e-01,   3.45355939e-01,  -1.28994908e-02, ...,\n",
-      "         0.00000000e+00,   3.90058475e-05,   1.18325991e-06]), 1.1417836100299008, 35.334123113815, 255)\n",
-      "(array([ -5.44768509e-01,   3.46067643e-01,  -1.32013813e-02, ...,\n",
-      "         2.93544345e-06,   5.85220445e-05,   7.30755893e-07]), 1.0675731254113414, 35.334123113815, 41)\n",
-      "(array([-0.38158869,  0.        , -0.        , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 20.374761852255602, 43.678004791596415, 15000)\n",
-      "(array([-0.41286573,  0.05207514,  0.        , ...,  0.        ,\n",
-      "        0.        ,  0.        ]), 5.138084378043446, 43.678004791596415, 1202)\n",
-      "(array([-0.50883986,  0.2609486 , -0.02827734, ..., -0.        ,\n",
-      "        0.        ,  0.        ]), 1.8510053574190437, 43.678004791596415, 1499)\n",
-      "(array([-0.5195376 ,  0.28360027, -0.03502772, ..., -0.        ,\n",
-      "       -0.        ,  0.        ]), 1.0034803652709765, 43.678004791596415, 228)\n",
-      "(array([ -5.21279411e-01,   2.87193332e-01,  -3.61601066e-02, ...,\n",
-      "         1.17797132e-05,   1.01166793e-05,   4.40302631e-06]), 0.9041212123822626, 43.678004791596415, 39)\n",
-      "(array([-0.94069831,  0.        , -0.        , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 21.708237712073668, 43.740350967510096, 12426)\n",
-      "(array([-1.02213542,  0.26135336,  0.        , ..., -0.        ,\n",
-      "        0.        ,  0.        ]), 6.5890417767930085, 43.740350967510096, 2111)\n",
-      "(array([-1.06504985,  0.34813231, -0.01477687, ..., -0.        ,\n",
-      "        0.        ,  0.        ]), 2.388469213261626, 43.740350967510096, 565)\n",
-      "(array([ -1.07147251e+00,   3.60747640e-01,  -1.85924066e-02, ...,\n",
-      "         0.00000000e+00,   9.40661990e-05,   1.66434441e-05]), 1.6283765373736643, 43.740350967510096, 119)\n",
-      "(array([ -1.07237125e+00,   3.62463755e-01,  -1.91439401e-02, ...,\n",
-      "         3.99261095e-06,   1.10615178e-04,   1.87651119e-05]), 1.544567313923486, 43.740350967510096, 18)\n",
-      "(array([-0.19457898,  0.        , -0.        , ..., -0.        ,\n",
-      "       -0.        , -0.        ]), 20.769532233561854, 35.334123113815, 15000)\n",
-      "(array([-0.31966651,  0.31107348,  0.        , ...,  0.        ,\n",
-      "        0.        ,  0.        ]), 5.456781342322165, 35.334123113815, 2877)\n",
-      "(array([-0.35530057,  0.37333921, -0.00375412, ..., -0.        ,\n",
-      "        0.        ,  0.        ]), 2.184865960778775, 35.334123113815, 749)\n",
-      "(array([ -3.59450293e-01,   3.80229877e-01,  -5.83395379e-03, ...,\n",
-      "         7.10009975e-06,   4.02406775e-05,   6.04663409e-06]), 1.4203362655054663, 35.334123113815, 191)"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.5/site-packages/sklearn/linear_model/coordinate_descent.py:466: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations\n",
-      "  ConvergenceWarning)\n",
-      "[Parallel(n_jobs=1)]: Done  12 out of  12 | elapsed:  4.7min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "(array([ -3.59820819e-01,   3.80803913e-01,  -6.05196610e-03, ...,\n",
-      "         1.06456547e-05,   5.19229392e-05,   6.35778599e-06]), 1.334981477359144, 35.334123113815, 21)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.GaussianDensityMultiH at 0x1265e9550>"
-      ]
-     },
-     "execution_count": 287,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hs = 126738*1.1**np.arange(-2, 2, 0.3)\n",
     "elastic = ElasticNetCV(verbose=3, max_iter=15000, alphas=np.logspace(-7, -3, 5), l1_ratio=np.array(np.linspace(0.1, 0.9, 4)))\n",
-    "gs = GaussianDensityMultiH(model=elastic, hs=hs/2)\n",
+    "gs = GaussianDensityMultiH(model=elastic, hs=hs)\n",
     "gs.fit(positions, temps)"
    ]
   },
@@ -851,69 +699,6 @@
     "plt.pcolor(temresult,cmap=plt.cm.Reds)\n",
     "cs = plt.contour(temresult, levels=np.linspace(np.min(temresult), np.max(temresult), 20)[1:-1])\n",
     "plt.clabel(cs, inline=1, fontsize=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 289,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9.9999999999999995e-08"
-      ]
-     },
-     "execution_count": 289,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "elastic.alpha_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 293,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "464236.2 776822.1 4810274.62 5105177.72\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.min(positions[:,0]),np.max(positions[:,0]),np.min(positions[:,1]),np.max(positions[:,1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 295,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.1       ,  0.36666667,  0.63333333,  0.9       ])"
-      ]
-     },
-     "execution_count": 295,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array(np.linspace(0.1, 0.9, 4))"
    ]
   }
  ],
